<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">
<RelativeLayout
    style="@style/Estilo_Unizar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/text_user2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/edusuario"
	        android:layout_alignLeft="@+id/edusuario"
	        android:layout_marginBottom="46dp"
	        android:text="@string/entrada_usuario"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/edpassword"
	        android:layout_alignLeft="@+id/edpassword"
	        android:layout_marginBottom="41dp"
	        android:text="@string/entrada_pass"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/edpassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/edusuario"
	        android:layout_below="@+id/edusuario"
	        android:layout_marginTop="69dp"
	        android:ems="10"
	        android:inputType="textPassword" >
	
	        
	    </EditText>
	
	    <EditText
	        android:id="@+id/edusuario"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="79dp"
	        android:ems="10"
	        android:inputType="textPersonName" >
	        <requestFocus />
	    </EditText>    
	
		<Button
		    android:id="@+id/bLogin"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/edpassword"
		    android:layout_below="@+id/textView2"
		    android:layout_marginTop="20dp"
		    android:background="#2d6898"
		    android:text="@string/boton_login"
		    android:textColor="#ffffff" />
	
		<TextView
		    android:id="@+id/txtrememberpassword"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/bLogin"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="18dp"
		    android:clickable="true"
		    android:text="@string/txt_rememberpass"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#5390ed"
		    android:textStyle="bold"
		    android:typeface="sans" />
	
		<TextView
		    android:id="@+id/txtregistro"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/txtrememberpassword"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="14dp"
		    android:clickable="true"
		    android:text="@string/txt_registro"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#5390ed"
		    android:textStyle="bold"
		    android:typeface="sans" />
		</RelativeLayout>
</ScrollView>