<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">
<RelativeLayout
    style="@style/Estilo_Unizar"
    android:id="@+id/relativechangePass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

   <TextView
        android:id="@+id/text_user2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edpassword"
        android:layout_alignLeft="@+id/edpassword"
        android:layout_marginBottom="46dp"
        android:text="@string/txt_newpass"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edpassword1"
        android:layout_alignLeft="@+id/edpassword1"
        android:layout_marginBottom="41dp"
        android:text="@string/txt_newpass1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edpassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edpassword"
        android:layout_below="@+id/edpassword"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/edpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>    

	<Button
	    android:id="@+id/bGuardarNewPassword"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/edpassword"
	    android:layout_below="@+id/txt_new_password"
	    android:layout_marginTop="20dp"
	    android:background="#2d6898"
	    android:text="@string/boton_savenewpass"
	    android:textColor="#ffffff" />
    
  
</RelativeLayout>
</ScrollView>